# openai_mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: mcp-openai-guide.md
scripts/: run_backend.py  run_backend_agents.py  run_backend_subprocess.py  run_fastmcp_http.py  run_fastmcp_server.py  run_frontend.py  run_frontend_react.py  run_hybrid_mcp.py  run_mcp_server.py  run_universal_mcp.py
src/backend/: config.py  conversation_manager.py  main.py  main_agents.py  main_subprocess.py  mcp_client.py  models.py  openai_client.py
src/chatbot_mcp/: __init__.py
src/frontend/: app.py  audio_transcriber.py
src/frontend_react/: README.md  package.json
src/frontend_react/public/: index.html
src/frontend_react/src/: App.js
src/frontend_react/src/components/: ChatContainer.js  Message.js  MessageInput.js  Sidebar.js  VoiceRecorder.js
src/frontend_react/src/services/: audioService.js  chatService.js  healthService.js
src/frontend_react/src/styles/: App.css  ChatContainer.css  Message.css  MessageInput.css  Sidebar.css  VoiceRecorder.css  index.css
src/mcp_server/: fastmcp_server.py  hybrid_server.py  models.py  server.py  tools.py  universal_server.py
